--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ cliff==3.10.1
 cmaes==0.8.2
 cmd2==2.4.1
 colorlog==6.6.0
+coremltools==5.2.0
 cycler==0.11.0
 debugpy==1.6.0
 decorator==5.1.1
@@ -36,6 +37,7 @@ MarkupSafe==2.1.1
 matplotlib==3.5.1
 matplotlib-inline==0.1.3
 mccabe==0.6.1
+mpmath==1.2.1
 nest-asyncio==1.5.5
 numpy==1.22.2
 optuna==2.10.0
@@ -48,6 +50,7 @@ pickleshare==0.7.5
 Pillow==9.1.0
 prettytable==3.2.0
 prompt-toolkit==3.0.29
+protobuf==3.20.1
 psutil==5.9.0
 ptyprocess==0.7.0
 pure-eval==0.2.2
@@ -68,12 +71,13 @@ six==1.16.0
 SQLAlchemy==1.4.35
 stack-data==0.2.0
 stevedore==3.5.0
+sympy==1.10.1
 threadpoolctl==3.1.0
 toml==0.10.2
-torch==1.11.0
+torch==1.11.0+cpu
 torchmetrics==0.8.0
 torchsummary==1.5.1
-torchvision==0.12.0
+torchvision==0.12.0+cpu
 tornado==6.1
 tqdm==4.64.0
 traitlets==5.1.1
